--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "my-plugin",
   "version": "0.0.1",
   "description": "get usr mac address",
+  "homepage_url": "https://github.com/anson09/chrome-extension",
   "icons": {
     "16": "icons/coffee-icon-16.png",
     "48": "icons/coffee-icon-48.png",
@@ -14,8 +15,7 @@
     "default_popup": "template/popup.html"
   },
   "background": {
-    "scripts": ["./script/background.js"],
-    "persistent": false
+    "scripts": ["./script/background.js"]
   },
   "content_scripts": [
     {
@@ -30,5 +30,15 @@
     }
   ],
   "web_accessible_resources": ["script/inject.js"],
-  "permissions": ["tabs"]
+  "permissions": [
+    "tabs",
+    "storage",
+    "webRequest",
+    "webRequestBlocking",
+    "<all_urls>"
+  ],
+  "options_ui": {
+    "page": "template/options.html",
+    "chrome_style": true
+  }
 }
